--Fix Footer overlapping issue --Fix dropdown issue in New Post form

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -41,3 +41,7 @@ a {
     margin-right: auto;
     width: 50%;
 }
+
+#main {
+	min-height:400px;
+}
